Explicitly enable pubsub in Prow job generator

--- a/config/prow/config_knative.yaml
+++ b/config/prow/config_knative.yaml
@@ -31,24 +31,27 @@ presubmits:
           memory: 16Gi
     - unit-tests: true
       dot-dev: true
+      is-monitored: true
     - integration-tests: true
       dot-dev: true
+      is-monitored: true
       args:
       - "--run-test"
       - "./test/e2e-tests.sh"
     - custom-test: upgrade-tests
       dot-dev: true
+      is-monitored: true
       args:
       - "--run-test"
       - "./test/e2e-upgrade-tests.sh"
     - custom-test: autotls-tests
       dot-dev: true
+      is-monitored: true
       args:
       - "--run-test"
       - "./test/e2e-auto-tls.sh"
     - custom-test: smoke-tests
       dot-dev: true
-      #
       always_run: false
       optional: true
       args:
