--- a/config/prow/config_knative.yaml
+++ b/config/prow/config_knative.yaml
@@ -64,73 +64,55 @@ presubmits:
       dot-dev: true
       always_run: false
       optional: true
-      args:
-      - "--run-test"
-      - "./test/e2e-tests.sh --istio-version 1.3-latest --mesh &&
+      full-command: "./test/e2e-tests.sh --istio-version 1.3-latest --mesh &&
       ./test/e2e-tests.sh --run-tests --skip-knative-setup --istio-version 1.3-latest --mesh"
     - custom-test: istio-1.3-no-mesh
       dot-dev: true
       always_run: false
       optional: true
-      args:
-      - "--run-test"
-      - "./test/e2e-tests.sh --istio-version 1.3-latest --no-mesh &&
+      full-command: "./test/e2e-tests.sh --istio-version 1.3-latest --no-mesh &&
       ./test/e2e-tests.sh --run-tests --skip-knative-setup --istio-version 1.3-latest --no-mesh"
     - custom-test: istio-1.4-mesh
       dot-dev: true
       always_run: false
       optional: true
-      args:
-      - "--run-test"
-      - "./test/e2e-tests.sh --istio-version 1.4-latest --mesh &&
+      full-command: "./test/e2e-tests.sh --istio-version 1.4-latest --mesh &&
       ./test/e2e-tests.sh --run-tests --skip-knative-setup --istio-version 1.4-latest --mesh"
     - custom-test: istio-1.4-no-mesh
       dot-dev: true
       always_run: false
       optional: true
-      args:
-      - "--run-test"
-      - "./test/e2e-tests.sh --istio-version 1.4-latest --no-mesh &&
+      full-command: "./test/e2e-tests.sh --istio-version 1.4-latest --no-mesh &&
       ./test/e2e-tests.sh --run-tests --skip-knative-setup --istio-version 1.4-latest --no-mesh"
     - custom-test: gloo-0.17.1
       dot-dev: true
       always_run: false
       optional: true
-      args:
-      - "--run-test"
-      - "./test/e2e-tests.sh --gloo-version 0.17.1 &&
+      full-command: "./test/e2e-tests.sh --gloo-version 0.17.1 &&
       ./test/e2e-tests.sh --run-tests --skip-knative-setup --gloo-version 0.17.1"
     - custom-test: kourier-stable
       dot-dev: true
       always_run: false
       optional: true
-      args:
-        - "--run-test"
-        - "./test/e2e-tests.sh --kourier-version stable &&
+      full-command: "./test/e2e-tests.sh --kourier-version stable &&
       ./test/e2e-tests.sh --run-tests --skip-knative-setup --kourier-version stable"
     - custom-test: contour-latest
       dot-dev: true
       always_run: false
       optional: true
-      args:
-        - "--run-test"
-        - "./test/e2e-tests.sh --contour-version latest &&
+      full-command: "./test/e2e-tests.sh --contour-version latest &&
       ./test/e2e-tests.sh --run-tests --skip-knative-setup --contour-version latest"
     - custom-test: ambassador-latest
       dot-dev: true
       always_run: false
       optional: true
-      args:
-        - "--run-test"
-        - "./test/e2e-tests.sh --ambassador-version latest &&
+      full-command: "./test/e2e-tests.sh --ambassador-version latest &&
       ./test/e2e-tests.sh --run-tests --skip-knative-setup --ambassador-version latest"
     - custom-test: https
       dot-dev: true
       always_run: false
       optional: true
-      args:
-      - "--run-test"
-      - "./test/e2e-tests.sh --https &&
+      full-command: "./test/e2e-tests.sh --https &&
       ./test/e2e-tests.sh --run-tests --skip-knative-setup --https"
     - custom-test: build-tests-go114
       dot-dev: true
