--- a/config/prow/jobs/config.yaml
+++ b/config/prow/jobs/config.yaml
@@ -600,9 +600,17 @@ presubmits:
         command:
         - runner.sh
         args:
-        - "./test/presubmit-tests.sh"
-        - "--run-test"
-        - "./test/e2e-tests.sh --istio-version 1.3-latest --mesh && ./test/e2e-tests.sh --run-tests --skip-knative-setup --istio-version 1.3-latest --mesh"
+        - "./test/e2e-tests.sh"
+        - "--istio-version"
+        - "1.3-latest"
+        - "--mesh"
+        - "&&"
+        - "./test/e2e-tests.sh"
+        - "--run-tests"
+        - "--skip-knative-setup"
+        - "--istio-version"
+        - "1.3-latest"
+        - "--mesh"
         volumeMounts:
         - name: test-account
           mountPath: /etc/test-account
@@ -634,9 +642,17 @@ presubmits:
         command:
         - runner.sh
         args:
-        - "./test/presubmit-tests.sh"
-        - "--run-test"
-        - "./test/e2e-tests.sh --istio-version 1.3-latest --mesh && ./test/e2e-tests.sh --run-tests --skip-knative-setup --istio-version 1.3-latest --mesh"
+        - "./test/e2e-tests.sh"
+        - "--istio-version"
+        - "1.3-latest"
+        - "--mesh"
+        - "&&"
+        - "./test/e2e-tests.sh"
+        - "--run-tests"
+        - "--skip-knative-setup"
+        - "--istio-version"
+        - "1.3-latest"
+        - "--mesh"
         volumeMounts:
         - name: test-account
           mountPath: /etc/test-account
@@ -668,9 +684,17 @@ presubmits:
         command:
         - runner.sh
         args:
-        - "./test/presubmit-tests.sh"
-        - "--run-test"
-        - "./test/e2e-tests.sh --istio-version 1.3-latest --no-mesh && ./test/e2e-tests.sh --run-tests --skip-knative-setup --istio-version 1.3-latest --no-mesh"
+        - "./test/e2e-tests.sh"
+        - "--istio-version"
+        - "1.3-latest"
+        - "--no-mesh"
+        - "&&"
+        - "./test/e2e-tests.sh"
+        - "--run-tests"
+        - "--skip-knative-setup"
+        - "--istio-version"
+        - "1.3-latest"
+        - "--no-mesh"
         volumeMounts:
         - name: test-account
           mountPath: /etc/test-account
@@ -702,9 +726,17 @@ presubmits:
         command:
         - runner.sh
         args:
-        - "./test/presubmit-tests.sh"
-        - "--run-test"
-        - "./test/e2e-tests.sh --istio-version 1.3-latest --no-mesh && ./test/e2e-tests.sh --run-tests --skip-knative-setup --istio-version 1.3-latest --no-mesh"
+        - "./test/e2e-tests.sh"
+        - "--istio-version"
+        - "1.3-latest"
+        - "--no-mesh"
+        - "&&"
+        - "./test/e2e-tests.sh"
+        - "--run-tests"
+        - "--skip-knative-setup"
+        - "--istio-version"
+        - "1.3-latest"
+        - "--no-mesh"
         volumeMounts:
         - name: test-account
           mountPath: /etc/test-account
@@ -736,9 +768,17 @@ presubmits:
         command:
         - runner.sh
         args:
-        - "./test/presubmit-tests.sh"
-        - "--run-test"
-        - "./test/e2e-tests.sh --istio-version 1.4-latest --mesh && ./test/e2e-tests.sh --run-tests --skip-knative-setup --istio-version 1.4-latest --mesh"
+        - "./test/e2e-tests.sh"
+        - "--istio-version"
+        - "1.4-latest"
+        - "--mesh"
+        - "&&"
+        - "./test/e2e-tests.sh"
+        - "--run-tests"
+        - "--skip-knative-setup"
+        - "--istio-version"
+        - "1.4-latest"
+        - "--mesh"
         volumeMounts:
         - name: test-account
           mountPath: /etc/test-account
@@ -770,9 +810,17 @@ presubmits:
         command:
         - runner.sh
         args:
-        - "./test/presubmit-tests.sh"
-        - "--run-test"
-        - "./test/e2e-tests.sh --istio-version 1.4-latest --mesh && ./test/e2e-tests.sh --run-tests --skip-knative-setup --istio-version 1.4-latest --mesh"
+        - "./test/e2e-tests.sh"
+        - "--istio-version"
+        - "1.4-latest"
+        - "--mesh"
+        - "&&"
+        - "./test/e2e-tests.sh"
+        - "--run-tests"
+        - "--skip-knative-setup"
+        - "--istio-version"
+        - "1.4-latest"
+        - "--mesh"
         volumeMounts:
         - name: test-account
           mountPath: /etc/test-account
@@ -804,9 +852,17 @@ presubmits:
         command:
         - runner.sh
         args:
-        - "./test/presubmit-tests.sh"
-        - "--run-test"
-        - "./test/e2e-tests.sh --istio-version 1.4-latest --no-mesh && ./test/e2e-tests.sh --run-tests --skip-knative-setup --istio-version 1.4-latest --no-mesh"
+        - "./test/e2e-tests.sh"
+        - "--istio-version"
+        - "1.4-latest"
+        - "--no-mesh"
+        - "&&"
+        - "./test/e2e-tests.sh"
+        - "--run-tests"
+        - "--skip-knative-setup"
+        - "--istio-version"
+        - "1.4-latest"
+        - "--no-mesh"
         volumeMounts:
         - name: test-account
           mountPath: /etc/test-account
@@ -838,9 +894,17 @@ presubmits:
         command:
         - runner.sh
         args:
-        - "./test/presubmit-tests.sh"
-        - "--run-test"
-        - "./test/e2e-tests.sh --istio-version 1.4-latest --no-mesh && ./test/e2e-tests.sh --run-tests --skip-knative-setup --istio-version 1.4-latest --no-mesh"
+        - "./test/e2e-tests.sh"
+        - "--istio-version"
+        - "1.4-latest"
+        - "--no-mesh"
+        - "&&"
+        - "./test/e2e-tests.sh"
+        - "--run-tests"
+        - "--skip-knative-setup"
+        - "--istio-version"
+        - "1.4-latest"
+        - "--no-mesh"
         volumeMounts:
         - name: test-account
           mountPath: /etc/test-account
@@ -872,9 +936,15 @@ presubmits:
         command:
         - runner.sh
         args:
-        - "./test/presubmit-tests.sh"
-        - "--run-test"
-        - "./test/e2e-tests.sh --gloo-version 0.17.1 && ./test/e2e-tests.sh --run-tests --skip-knative-setup --gloo-version 0.17.1"
+        - "./test/e2e-tests.sh"
+        - "--gloo-version"
+        - "0.17.1"
+        - "&&"
+        - "./test/e2e-tests.sh"
+        - "--run-tests"
+        - "--skip-knative-setup"
+        - "--gloo-version"
+        - "0.17.1"
         volumeMounts:
         - name: test-account
           mountPath: /etc/test-account
@@ -906,9 +976,15 @@ presubmits:
         command:
         - runner.sh
         args:
-        - "./test/presubmit-tests.sh"
-        - "--run-test"
-        - "./test/e2e-tests.sh --gloo-version 0.17.1 && ./test/e2e-tests.sh --run-tests --skip-knative-setup --gloo-version 0.17.1"
+        - "./test/e2e-tests.sh"
+        - "--gloo-version"
+        - "0.17.1"
+        - "&&"
+        - "./test/e2e-tests.sh"
+        - "--run-tests"
+        - "--skip-knative-setup"
+        - "--gloo-version"
+        - "0.17.1"
         volumeMounts:
         - name: test-account
           mountPath: /etc/test-account
@@ -940,9 +1016,15 @@ presubmits:
         command:
         - runner.sh
         args:
-        - "./test/presubmit-tests.sh"
-        - "--run-test"
-        - "./test/e2e-tests.sh --kourier-version stable && ./test/e2e-tests.sh --run-tests --skip-knative-setup --kourier-version stable"
+        - "./test/e2e-tests.sh"
+        - "--kourier-version"
+        - "stable"
+        - "&&"
+        - "./test/e2e-tests.sh"
+        - "--run-tests"
+        - "--skip-knative-setup"
+        - "--kourier-version"
+        - "stable"
         volumeMounts:
         - name: test-account
           mountPath: /etc/test-account
@@ -974,9 +1056,15 @@ presubmits:
         command:
         - runner.sh
         args:
-        - "./test/presubmit-tests.sh"
-        - "--run-test"
-        - "./test/e2e-tests.sh --kourier-version stable && ./test/e2e-tests.sh --run-tests --skip-knative-setup --kourier-version stable"
+        - "./test/e2e-tests.sh"
+        - "--kourier-version"
+        - "stable"
+        - "&&"
+        - "./test/e2e-tests.sh"
+        - "--run-tests"
+        - "--skip-knative-setup"
+        - "--kourier-version"
+        - "stable"
         volumeMounts:
         - name: test-account
           mountPath: /etc/test-account
@@ -1008,9 +1096,15 @@ presubmits:
         command:
         - runner.sh
         args:
-        - "./test/presubmit-tests.sh"
-        - "--run-test"
-        - "./test/e2e-tests.sh --contour-version latest && ./test/e2e-tests.sh --run-tests --skip-knative-setup --contour-version latest"
+        - "./test/e2e-tests.sh"
+        - "--contour-version"
+        - "latest"
+        - "&&"
+        - "./test/e2e-tests.sh"
+        - "--run-tests"
+        - "--skip-knative-setup"
+        - "--contour-version"
+        - "latest"
         volumeMounts:
         - name: test-account
           mountPath: /etc/test-account
@@ -1042,9 +1136,15 @@ presubmits:
         command:
         - runner.sh
         args:
-        - "./test/presubmit-tests.sh"
-        - "--run-test"
-        - "./test/e2e-tests.sh --contour-version latest && ./test/e2e-tests.sh --run-tests --skip-knative-setup --contour-version latest"
+        - "./test/e2e-tests.sh"
+        - "--contour-version"
+        - "latest"
+        - "&&"
+        - "./test/e2e-tests.sh"
+        - "--run-tests"
+        - "--skip-knative-setup"
+        - "--contour-version"
+        - "latest"
         volumeMounts:
         - name: test-account
           mountPath: /etc/test-account
@@ -1076,9 +1176,15 @@ presubmits:
         command:
         - runner.sh
         args:
-        - "./test/presubmit-tests.sh"
-        - "--run-test"
-        - "./test/e2e-tests.sh --ambassador-version latest && ./test/e2e-tests.sh --run-tests --skip-knative-setup --ambassador-version latest"
+        - "./test/e2e-tests.sh"
+        - "--ambassador-version"
+        - "latest"
+        - "&&"
+        - "./test/e2e-tests.sh"
+        - "--run-tests"
+        - "--skip-knative-setup"
+        - "--ambassador-version"
+        - "latest"
         volumeMounts:
         - name: test-account
           mountPath: /etc/test-account
@@ -1110,9 +1216,15 @@ presubmits:
         command:
         - runner.sh
         args:
-        - "./test/presubmit-tests.sh"
-        - "--run-test"
-        - "./test/e2e-tests.sh --ambassador-version latest && ./test/e2e-tests.sh --run-tests --skip-knative-setup --ambassador-version latest"
+        - "./test/e2e-tests.sh"
+        - "--ambassador-version"
+        - "latest"
+        - "&&"
+        - "./test/e2e-tests.sh"
+        - "--run-tests"
+        - "--skip-knative-setup"
+        - "--ambassador-version"
+        - "latest"
         volumeMounts:
         - name: test-account
           mountPath: /etc/test-account
@@ -1144,9 +1256,13 @@ presubmits:
         command:
         - runner.sh
         args:
-        - "./test/presubmit-tests.sh"
-        - "--run-test"
-        - "./test/e2e-tests.sh --https && ./test/e2e-tests.sh --run-tests --skip-knative-setup --https"
+        - "./test/e2e-tests.sh"
+        - "--https"
+        - "&&"
+        - "./test/e2e-tests.sh"
+        - "--run-tests"
+        - "--skip-knative-setup"
+        - "--https"
         volumeMounts:
         - name: test-account
           mountPath: /etc/test-account
@@ -1178,9 +1294,13 @@ presubmits:
         command:
         - runner.sh
         args:
-        - "./test/presubmit-tests.sh"
-        - "--run-test"
-        - "./test/e2e-tests.sh --https && ./test/e2e-tests.sh --run-tests --skip-knative-setup --https"
+        - "./test/e2e-tests.sh"
+        - "--https"
+        - "&&"
+        - "./test/e2e-tests.sh"
+        - "--run-tests"
+        - "--skip-knative-setup"
+        - "--https"
         volumeMounts:
         - name: test-account
           mountPath: /etc/test-account
