Set up CI for the net-istio repo

--- a/config/prow/core/config.yaml
+++ b/config/prow/core/config.yaml
@@ -105,6 +105,7 @@ tide:
     - "knative/eventing-contrib"
     - "knative/eventing-operator"
     - "knative/net-contour"
+    - "knative/net-istio"
     - "knative/observability"
     - "knative/pkg"
     - "knative/sample-controller"
