--- a/config/prow/testgrid/testgrid.yaml
+++ b/config/prow/testgrid/testgrid.yaml
@@ -240,6 +240,22 @@ test_groups:
 - name: ci-knative-net-contour-test-coverage
   gcs_prefix: knative-prow/logs/ci-knative-net-contour-go-coverage
   short_text_metric: "coverage"
+- name: ci-knative-net-istio-continuous
+  gcs_prefix: knative-prow/logs/ci-knative-net-istio-continuous
+  alert_stale_results_hours: 3
+- name: ci-knative-net-istio-nightly-release
+  gcs_prefix: knative-prow/logs/ci-knative-net-istio-nightly-release
+  num_failures_to_alert: 1
+- name: ci-knative-net-istio-dot-release
+  gcs_prefix: knative-prow/logs/ci-knative-net-istio-dot-release
+  alert_stale_results_hours: 170
+  num_failures_to_alert: 1
+- name: ci-knative-net-istio-auto-release
+  gcs_prefix: knative-prow/logs/ci-knative-net-istio-auto-release
+  num_failures_to_alert: 1
+- name: ci-knative-net-istio-test-coverage
+  gcs_prefix: knative-prow/logs/ci-knative-net-istio-go-coverage
+  short_text_metric: "coverage"
 - name: ci-knative-serving-0.9-continuous
   gcs_prefix: knative-prow/logs/ci-knative-serving-0.9-continuous
   num_failures_to_alert: 3
@@ -524,6 +540,23 @@ dashboards:
   - name: coverage
     test_group_name: ci-knative-net-contour-test-coverage
     base_options: "exclude-filter-by-regex=Overall$&group-by-directory=&expand-groups=&sort-by-name="
+- name: net-istio
+  dashboard_tab:
+  - name: continuous
+    test_group_name: ci-knative-net-istio-continuous
+    base_options: "sort-by-name="
+  - name: nightly
+    test_group_name: ci-knative-net-istio-nightly-release
+    base_options: "sort-by-name="
+  - name: dot-release
+    test_group_name: ci-knative-net-istio-dot-release
+    base_options: "sort-by-name="
+  - name: auto-release
+    test_group_name: ci-knative-net-istio-auto-release
+    base_options: "sort-by-name="
+  - name: coverage
+    test_group_name: ci-knative-net-istio-test-coverage
+    base_options: "exclude-filter-by-regex=Overall$&group-by-directory=&expand-groups=&sort-by-name="
 - name: knative-gcp
   dashboard_tab:
   - name: continuous
@@ -626,6 +659,7 @@ dashboard_groups:
   - "serving-operator"
   - "eventing-operator"
   - "net-contour"
+  - "net-istio"
 - name: google
   dashboard_names:
   - "knative-gcp"
