--- a/config/prow/config_knative.yaml
+++ b/config/prow/config_knative.yaml
@@ -321,6 +321,20 @@ presubmits:
     - go-coverage: true
       dot-dev: true
 
+  knative/net-istio:
+    - repo-settings:
+      go112-branches:
+      - release-0.9 # This branch doesn't actually exist, create here to make
+      # config generator work
+    - build-tests: true
+      dot-dev: true
+    - unit-tests: true
+      dot-dev: true
+    - integration-tests: false
+      dot-dev: true
+    - go-coverage: true
+      dot-dev: true
+
   knative/serving-operator:
     - repo-settings:
       go112-branches:
@@ -698,6 +712,20 @@ periodics:
       - ORG_NAME=google
 
   knative/net-contour:
+    - continuous: true
+      dot-dev: true
+      go113: true
+    - nightly: true
+      dot-dev: true
+      go113: true
+    - dot-release: true
+      dot-dev: true
+      go113: true
+    - auto-release: true
+      dot-dev: true
+      go113: true
+
+  knative/net-istio:
     - continuous: true
       dot-dev: true
       go113: true
