--- a/config/prow/core/plugins.yaml
+++ b/config/prow/core/plugins.yaml
@@ -24,6 +24,7 @@ approve:
   - "knative/eventing-contrib"
   - "knative/eventing-operator"
   - "knative/net-contour"
+  - "knative/net-istio"
   - "knative/observability"
   - "knative/pkg"
   - "knative/sample-controller"
@@ -337,6 +338,31 @@ plugins:
   - welcome
   - wip
   - yuks
+  knative/net-istio:
+  - approve
+  - assign
+  - blunderbuss
+  - buildifier
+  - cat
+  - dog
+  - golint
+  - heart
+  - help
+  - hold
+  - label
+  - lgtm
+  - lifecycle
+  - milestone
+  - owners-label
+  - project
+  - shrug
+  - size
+  - skip
+  - trigger
+  - verify-owners
+  - welcome
+  - wip
+  - yuks
   knative/observability:
   - approve
   - assign
@@ -584,6 +610,11 @@ external_plugins:
       - issue_comment
       - pull_request
   knative/net-contour:
+  - name: needs-rebase
+    events:
+      - issue_comment
+      - pull_request
+  knative/net-istio:
   - name: needs-rebase
     events:
       - issue_comment
