Set up CI for the net-istio repo (#1753)

--- a/config/prow/core/config.yaml
+++ b/config/prow/core/config.yaml
@@ -108,6 +108,7 @@ tide:
     - "knative/eventing-contrib"
     - "knative/eventing-operator"
     - "knative/net-contour"
+    - "knative/net-istio"
     - "knative/observability"
     - "knative/pkg"
     - "knative/sample-controller"
