--- a/config/prow/Makefile
+++ b/config/prow/Makefile
@@ -20,4 +20,5 @@ TESTGRID_GCS  := knative-testgrid
 KNATIVE_CONFIG   := config_knative.yaml
 TESTGRID_CONFIG  := testgrid/testgrid.yaml
 
-include prod_staging.mk
+include ../prow_common.mk
+
