Fix Prow Makefile (#1741)
* Fix Prow Makefile

`make` with -C already changes directory, so everything can already be
relative paths.

Also update the other uses of this program and align command names
better.

/cc @chizhg @chaodaiG

* Missed fixing which config.yaml it is

* Markdown reviewer checks links to webhooks and gets mad about it

Try backticks instead.

* $(realpath) for those that need it

* Improve Makefile usage and document existing

Makefiles should not be magically included by other Makefiles, so
moving common functionality into `prod_staging.mk` file and
documenting it.

The config generator Go program was giving old information about
how to generate files, so corrected it.

The generated configs now depend on the templates for the config
generator, so they can be auto-updated as necessary.

Staging directory duplicates directory structure of regular
deployment. Config generator config file is only difference now (as
far as the Makefiles are concerned).

* Have presubmit-tests.sh print when it fails

* Address all Chi's comments & add update gating for master

Now can't update server unless on clean master branch, preventing some
mistakes when manually updating Prow.

Address lots of little comments.

Added lots of docs on why things are they way they are.

* A couple more doc comments

* Change the way commit is saved in the config yaml

--- a/config/prow-staging/Makefile
+++ b/config/prow-staging/Makefile
@@ -12,9 +12,6 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-# This is the canonical path of this Makefile.
-STAGING_DIR := $(realpath $(dir $(abspath $(lastword $(MAKEFILE_LIST)))))
-
 # Staging cluster configuration
 
 PROJECT                   := knative-tests-staging
@@ -24,13 +21,9 @@ TESTGRID_GCS              := knative-testgrid-staging
 GENERATE_TESTGRID_CONFIG  := false
 GENERATE_MAINTENANCE_JOBS := false
 
-KNATIVE_CONFIG   := $(STAGING_DIR)/config_staging.yaml
-PROW_PLUGINS     := $(STAGING_DIR)/plugins.yaml
-PROW_CONFIG      := $(STAGING_DIR)/config.yaml
-PROW_JOB_CONFIG := $(STAGING_DIR)/jobs/config.yaml
-BOSKOS_RESOURCES := $(STAGING_DIR)/boskos_resources.yaml
+KNATIVE_CONFIG   := config_staging.yaml
 
-include $(STAGING_DIR)/../Makefile
+include ../prow_common.mk
 
 # Append to update-all-boskos-deployments: only 3 replicas of janitor
 update-all-boskos-deployments::
@@ -38,7 +31,7 @@ update-all-boskos-deployments::
 	kubectl patch deployment boskos-janitor -n test-pods -p '{"spec":{"replicas":3}}'
 	$(UNSET_CONTEXT)
 
-update-all-cluster-deployments::
+update-almost-all-cluster-deployments::
 	$(SET_CONTEXT)
 	$(eval host := $(subst https://,,$(PROW_HOST)))
 	kubectl get ingress -oyaml | sed "s/prow.knative.dev/$(host)/" | kubectl apply -f -
