--- a/config/prow/Makefile
+++ b/config/prow/Makefile
@@ -12,172 +12,13 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-# Default settings for the CI/CD system.
+PROJECT       := knative-tests
+PROW_GCS      := knative-prow
+PROW_HOST     := https://prow.knative.dev
+TESTGRID_GCS  := knative-testgrid
 
-CLUSTER       ?= prow
-PROJECT       ?= knative-tests
-ZONE          ?= us-central1-f
-JOB_NAMESPACE ?= test-pods
-PROW_HOST     ?= https://prow.knative.dev
+KNATIVE_CONFIG   := config_knative.yaml
+TESTGRID_CONFIG  := testgrid/testgrid.yaml
 
-SKIP_CONFIG_BACKUP        ?=
-GENERATE_MAINTENANCE_JOBS ?= true
-GENERATE_TESTGRID_CONFIG  ?= true
+include ../prow_common.mk
 
-# This is the canonical path of this Makefile, aka /config/prow dir.
-PROW_DIR             ?= $(realpath $(dir $(abspath $(lastword $(MAKEFILE_LIST)))))
-CONFIG_GENERATOR_DIR ?= $(PROW_DIR)/../../tools/config-generator
-
-KNATIVE_CONFIG   ?= $(PROW_DIR)/config_knative.yaml
-PROW_PLUGINS     ?= $(PROW_DIR)/core/plugins.yaml
-PROW_CONFIG      ?= $(PROW_DIR)/core/config.yaml
-PROW_JOB_CONFIG  ?= ${PROW_DIR}/jobs/config.yaml
-PROW_DEPLOYS     ?= $(PROW_DIR)/cluster
-PROW_GCS         ?= knative-prow
-PROW_CONFIG_GCS  ?= gs://$(PROW_GCS)/configs
-
-TESTGRID_GCS    ?= knative-testgrid
-TESTGRID_CONFIG ?= $(PROW_DIR)/testgrid/testgrid.yaml
-
-BOSKOS_RESOURCES ?= $(PROW_DIR)/boskos/boskos_resources.yaml
-
-# Useful shortcuts.
-
-SET_CONTEXT   := gcloud container clusters get-credentials "$(CLUSTER)" --project="$(PROJECT)" --zone="$(ZONE)"
-UNSET_CONTEXT := kubectl config unset current-context
-MAKE_CONFIG   := go run "${CONFIG_GENERATOR_DIR}"
-
-# Avoid the default target being harmful.
-default:
-	@echo "You must specify a target"
-
-# Useful general targets.
-get-cluster-credentials:
-	$(SET_CONTEXT)
-
-unset-cluster-credentials:
-	$(UNSET_CONTEXT)
-
-# Generate the Prow config file
-config:
-	$(MAKE_CONFIG) \
-		--gcs-bucket=$(PROW_GCS) \
-		--generate-testgrid-config=$(GENERATE_TESTGRID_CONFIG) \
-		--generate-maintenance-jobs=$(GENERATE_MAINTENANCE_JOBS) \
-		--image-docker=gcr.io/$(PROJECT)/test-infra \
-		--plugins-config-output=$(PROW_PLUGINS) \
-		--prow-config-output=$(PROW_CONFIG) \
-		--prow-jobs-config-output=$(PROW_JOB_CONFIG) \
-		--prow-host=$(PROW_HOST) \
-		--testgrid-config-output=$(TESTGRID_CONFIG) \
-		--testgrid-gcs-bucket=$(TESTGRID_GCS) \
-		$(KNATIVE_CONFIG)
-
-# Update prow config
-update-prow-config:
-	$(SET_CONTEXT)
-	kubectl create configmap config --from-file=config.yaml=$(PROW_CONFIG) --dry-run --save-config -o yaml | kubectl apply -f -
-	$(UNSET_CONTEXT)
-
-# Update all prow job configs
-update-prow-job-config:
-	$(SET_CONTEXT)
-ifndef SKIP_CONFIG_BACKUP
-	$(eval OLD_YAML_CONFIG := $(shell mktemp))
-	$(eval NEW_YAML_CONFIG := $(shell mktemp))
-	$(eval GCS_DEST := $(PROW_CONFIG_GCS)/config-$(shell date '+%Y_%m_%d_%H:%M:%S').yaml)
-	@kubectl get configmap job-config -o jsonpath="{.data['config\.yaml']}" 2>/dev/null > "${OLD_YAML_CONFIG}"
-	@gsutil cp "${OLD_YAML_CONFIG}" "${GCS_DEST}" > /dev/null
-	@sed -e "s/((COMMIT_HASH_TOKEN))/$(shell git rev-parse HEAD)/" $(PROW_JOB_CONFIG) > "${NEW_YAML_CONFIG}"
-else
-	$(eval NEW_YAML_CONFIG := $(PROW_JOB_CONFIG))
-endif
-	# We'll have to use `kubectl replace` here because `kubectl apply` will add the whole original configmap to the
-	# `last-applied-configuration` annotation, but k8s has a maxmium 256kb limit for it, see https://github.com/kubernetes/kubectl/issues/712
-	kubectl create configmap job-config --from-file=config.yaml=$(NEW_YAML_CONFIG) --dry-run -o yaml | kubectl replace configmap job-config -f -
-	$(UNSET_CONTEXT)
-ifndef SKIP_CONFIG_BACKUP
-	diff "${OLD_YAML_CONFIG}" "${NEW_YAML_CONFIG}" --color=auto || true
-	@echo "Inspect uploaded config file at: ${NEW_YAML_CONFIG}"
-	@echo "Old config file saved at: ${GCS_DEST}"
-endif
-
-# Update prow plugins
-update-prow-plugins:
-	$(SET_CONTEXT)
-	kubectl create configmap plugins --from-file=plugins.yaml=$(PROW_PLUGINS) --dry-run --save-config -o yaml | kubectl apply -f -
-	$(UNSET_CONTEXT)
-
-# Update all deployments of boskos
-update-all-boskos-deployments::
-	$(SET_CONTEXT)
-	@for f in $(wildcard $(PROW_DEPLOYS)/boskos*.yaml); do kubectl apply -f $${f}; done
-	$(UNSET_CONTEXT)
-
-# Update the list of resources for Boskos
-update-boskos-resource:
-	$(SET_CONTEXT)
-	kubectl create configmap resources --from-file=config=$(BOSKOS_RESOURCES) --dry-run --save-config -o yaml | kubectl --namespace="$(JOB_NAMESPACE)" apply -f -
-	$(UNSET_CONTEXT)
-
-# Update all deployment of cluster
-update-all-cluster-deployments::
-	$(SET_CONTEXT)
-	@for f in $(filter-out $(wildcard $(PROW_DEPLOYS)/boskos*.yaml),$(wildcard $(PROW_DEPLOYS)/*.yaml)); do kubectl apply -f $${f}; done
-	$(UNSET_CONTEXT)
-
-# Update single deployment of cluster, expect passing in ${NAME} like `make update-single-cluster-deployment NAME=crier_deployment`
-update-single-cluster-deployment:
-	$(SET_CONTEXT)
-	kubectl apply -f $(PROW_DEPLOYS)/$(NAME).yaml
-	$(UNSET_CONTEXT)
-
-# Update all resources on Prow cluster except boskos resource
-update-full: update-all-cluster-deployments update-all-boskos-deployments update-prow-plugins update-prow-config update-prow-job-config
-
-# Ensure that configs are valid and up-to-date
-test:
-	@echo "*** Checking config generator for prow and testgrid"
-	$(eval TMP_YAML_PROW := $(shell mktemp))
-	$(eval TMP_YAML_PROW_JOBS := $(shell mktemp))
-	$(eval TMP_YAML_PLUGINS := $(shell mktemp))
-	$(eval TMP_YAML_TESTGRID := $(shell mktemp))
-	$(MAKE_CONFIG) \
-		--gcs-bucket=$(PROW_GCS) \
-		--generate-maintenance-jobs=$(GENERATE_MAINTENANCE_JOBS) \
-		--image-docker=gcr.io/$(PROJECT)/test-infra \
-		--plugins-config-output=$(TMP_YAML_PLUGINS) \
-		--prow-config-output=$(TMP_YAML_PROW) \
-		--prow-jobs-config-output=$(TMP_YAML_PROW_JOBS) \
-		--prow-host=$(PROW_HOST) \
-		--testgrid-config-output=$(TMP_YAML_TESTGRID) \
-		--testgrid-gcs-bucket=$(TESTGRID_GCS) \
-		$(KNATIVE_CONFIG)
-	diff --ignore-matching-lines="^# Copyright " $(PROW_CONFIG) $(TMP_YAML_PROW)
-	diff --ignore-matching-lines="^# Copyright " $(PROW_JOB_CONFIG) $(TMP_YAML_PROW_JOBS)
-	diff --ignore-matching-lines="^# Copyright " $(PROW_PLUGINS) $(TMP_YAML_PLUGINS)
-	diff --ignore-matching-lines="^# Copyright " $(TESTGRID_CONFIG) $(TMP_YAML_TESTGRID)
-	@echo "*** Checking configs validity"
-	bazel run @k8s//prow/cmd/checkconfig -- \
-		--config-path=$(PROW_CONFIG) \
-		--job-config-path=$(PROW_JOB_CONFIG) \
-		--plugin-config=$(PROW_PLUGINS)
-	bazel run @k8s//testgrid/cmd/configurator -- \
-		--validate-config-file \
-		--yaml=$(TESTGRID_CONFIG) \
-	# Ensure TestGrid config can be converted to binary form.
-	bazel run @k8s//testgrid/cmd/configurator -- \
-		--oneshot \
-		--output=/dev/null \
-		--yaml=$(TESTGRID_CONFIG)
-
-# Update TestGrid config.
-# Application Default Credentials must be set, otherwise the upload will fail.
-# Either export $GOOGLE_APPLICATION_CREDENTIALS pointing to a valid service
-# account key, or temporarily use your own credentials by running
-# gcloud auth application-default login
-update-testgrid-config:
-	bazel run @k8s//testgrid/cmd/configurator -- \
-		--oneshot \
-		--output=gs://$(TESTGRID_GCS)/config \
-		--yaml=$(TESTGRID_CONFIG)
