run config validator as a separate job

--- a/config/prow/config_knative.yaml
+++ b/config/prow/config_knative.yaml
@@ -249,6 +249,10 @@ presubmits:
       dot-dev: true
     - integration-tests: true
       dot-dev: true
+    - custom-test: check-config
+      dot-dev: true
+      args:
+        - "./test/presubmit-config-check.sh"
 
   knative/caching:
     - repo-settings:
