--- a/config/prow/Makefile
+++ b/config/prow/Makefile
@@ -15,8 +15,10 @@
 PROJECT       := knative-tests
 PROW_GCS      := knative-prow
 PROW_HOST     := https://prow.knative.dev
+TESTGRID_GCS  := knative-testgrid
 
 KNATIVE_CONFIG   := config_knative.yaml
+TESTGRID_CONFIG  := testgrid/testgrid.yaml
 
 include ../prow_common.mk
 
