--- a/config/prow/jobs/config.yaml
+++ b/config/prow/jobs/config.yaml
@@ -3209,7 +3209,7 @@ presubmits:
     decorate: true
     path_alias: knative.dev/test-infra
     branches:
-    - "release-0.10"
+    - "legacy"
     spec:
       containers:
       - image: gcr.io/knative-tests/test-infra/prow-tests-go112:stable
@@ -3247,7 +3247,7 @@ presubmits:
     decorate: true
     path_alias: knative.dev/test-infra
     skip_branches:
-    - "release-0.10"
+    - "legacy"
     spec:
       containers:
       - image: gcr.io/knative-tests/test-infra/prow-tests:stable
@@ -3285,7 +3285,7 @@ presubmits:
     decorate: true
     path_alias: knative.dev/test-infra
     branches:
-    - "release-0.10"
+    - "legacy"
     spec:
       containers:
       - image: gcr.io/knative-tests/test-infra/prow-tests-go112:stable
@@ -3323,7 +3323,7 @@ presubmits:
     decorate: true
     path_alias: knative.dev/test-infra
     skip_branches:
-    - "release-0.10"
+    - "legacy"
     spec:
       containers:
       - image: gcr.io/knative-tests/test-infra/prow-tests:stable
@@ -3361,7 +3361,7 @@ presubmits:
     decorate: true
     path_alias: knative.dev/test-infra
     branches:
-    - "release-0.10"
+    - "legacy"
     spec:
       containers:
       - image: gcr.io/knative-tests/test-infra/prow-tests-go112:stable
@@ -3399,7 +3399,7 @@ presubmits:
     decorate: true
     path_alias: knative.dev/test-infra
     skip_branches:
-    - "release-0.10"
+    - "legacy"
     spec:
       containers:
       - image: gcr.io/knative-tests/test-infra/prow-tests:stable
@@ -3437,7 +3437,7 @@ presubmits:
     decorate: true
     path_alias: knative.dev/test-infra
     branches:
-    - "release-0.10"
+    - "legacy"
     spec:
       containers:
       - image: gcr.io/knative-tests/test-infra/prow-tests-go112:stable
@@ -3469,7 +3469,7 @@ presubmits:
     decorate: true
     path_alias: knative.dev/test-infra
     skip_branches:
-    - "release-0.10"
+    - "legacy"
     spec:
       containers:
       - image: gcr.io/knative-tests/test-infra/prow-tests:stable
