--- a/config/prow/testgrid/testgrid.yaml
+++ b/config/prow/testgrid/testgrid.yaml
@@ -303,6 +303,28 @@ test_groups:
 - name: ci-knative-net-istio-test-coverage
   gcs_prefix: knative-prow/logs/ci-knative-net-istio-go-coverage
   short_text_metric: "coverage"
+- name: ci-knative-net-kourier-continuous
+  gcs_prefix: knative-prow/logs/ci-knative-net-kourier-continuous
+  alert_stale_results_hours: 3
+- name: ci-knative-net-kourier-nightly-release
+  gcs_prefix: knative-prow/logs/ci-knative-net-kourier-nightly-release
+  alert_options: 
+    alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+  num_failures_to_alert: 1
+- name: ci-knative-net-kourier-dot-release
+  gcs_prefix: knative-prow/logs/ci-knative-net-kourier-dot-release
+  alert_options: 
+    alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+  alert_stale_results_hours: 170
+  num_failures_to_alert: 1
+- name: ci-knative-net-kourier-auto-release
+  gcs_prefix: knative-prow/logs/ci-knative-net-kourier-auto-release
+  alert_options: 
+    alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+  num_failures_to_alert: 1
+- name: ci-knative-net-kourier-test-coverage
+  gcs_prefix: knative-prow/logs/ci-knative-net-kourier-go-coverage
+  short_text_metric: "coverage"
 - name: ci-knative-serving-0.10-continuous
   gcs_prefix: knative-prow/logs/ci-knative-serving-0.10-continuous
   alert_options: 
@@ -756,6 +778,35 @@ dashboards:
   - name: coverage
     test_group_name: ci-knative-net-istio-test-coverage
     base_options: "exclude-filter-by-regex=Overall$&group-by-directory=&expand-groups=&sort-by-name="
+- name: net-kourier
+  dashboard_tab:
+  - name: continuous
+    test_group_name: ci-knative-net-kourier-continuous
+    base_options: "sort-by-name="
+    alert_options: 
+      alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+    num_failures_to_alert: 3
+  - name: nightly
+    test_group_name: ci-knative-net-kourier-nightly-release
+    base_options: "sort-by-name="
+    alert_options: 
+      alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+    num_failures_to_alert: 1
+  - name: dot-release
+    test_group_name: ci-knative-net-kourier-dot-release
+    base_options: "sort-by-name="
+    alert_options: 
+      alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+    num_failures_to_alert: 1
+  - name: auto-release
+    test_group_name: ci-knative-net-kourier-auto-release
+    base_options: "sort-by-name="
+    alert_options: 
+      alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+    num_failures_to_alert: 1
+  - name: coverage
+    test_group_name: ci-knative-net-kourier-test-coverage
+    base_options: "exclude-filter-by-regex=Overall$&group-by-directory=&expand-groups=&sort-by-name="
 - name: knative-gcp
   dashboard_tab:
   - name: continuous
@@ -908,6 +959,7 @@ dashboard_groups:
   - "eventing-operator"
   - "net-contour"
   - "net-istio"
+  - "net-kourier"
 - name: google
   dashboard_names:
   - "knative-gcp"
